# openglprojekt

./: .cproject  .gitignore  .project  CMakeLists.txt  Camera.h  Game.cpp  Game.h  Texture.cpp  createHeightmap  keyCallback.cpp  keyCallback.h  makefile  untitled.blend  untitled.blend1
Debug/: OpenGLProjekt  Texture.d  keyCallback.d  makefile  normalmapping.fs  subdir.mk
Models/: kubus.mtl
Release/: GLerror.d  Game.d  GameObject.d  ModelLoader.d  OpenGLProjekt  loadShader.d  main.d  normalmapping.vs  objects.mk  subdir.mk
Release/Models/: cube.obj~  subdir.mk
Release/Shader/: environment.fsh  environment.vsh  reliefmapping.vs
Shader/: normalmapping.fs  normalmapping.vs  reliefmapping.fs  simple.fs  simple.vs  tesselation.fs  tesselation.vs
Source/: Camera.cpp  GLerror.cpp  GLerror.h  GameObject.cpp  GameObject.h  ModelLoader.cpp  ModelLoader.h  Texture.h  loadShader.cpp  loadShader.h  main.cpp
